--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
 
 }
 
+
 @media screen and (min-width: 1000px){
 	#about .left{
 		margin-top: 8%;
@@ -23,9 +24,44 @@
 		font-size: 1.5em;
 	}
 	.card{
-		width: 50%;
+		width: 85%;
 		margin: 5px auto;
 	}
+	.row{
+		min-width: 50vh;
+	}
+	#cd-timeline{
+		width: 100%;
+		position: relative;
+	}
+	.cd-timeline-block-right{
+		position: relative;
+		left: 55%;
+		width: 30%;
+		text-align: left;
+	}
+	.cd-timeline-block-left, .cd-timeline-block-right{
+		border: 1px solid rgba(0,0,0,.125);
+		padding: 2%;
+	}
+	.cd-timeline-block-left{
+		position: relative;
+		text-align: right;
+		/* right: 0%; */
+		width: 30%;
+		left: 16%;
+	}
+	.line{
+		border-left: 8px solid rgba(0, 0, 0, 0.22);
+		left: 50%;
+		position: absolute;
+		z-index: 136;
+		height: 100%;
+	}
+	.cd-timeline-content p{
+		text-align: justify;
+	}
+
 }
 
 .card img{
@@ -34,10 +70,13 @@
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
 }
+.col-md-3 .card{
+	width: 100%;
+}
 .card img:hover{
 	-moz-transform: scale(1.01);
 	-webkit-transform: scale(1.01);
-	transform: scale(1.01);
+	transform: scale(1.3);
 }
 .card{
 	overflow: hidden;
@@ -63,28 +102,196 @@
 }
 /*.row{
 	height:100vh;
-}*/
-#about{
-	text-align: center;
-	margin-top: 60px;
-	height:100vh;
-}
-.links{
-	width:70%;
-	text-align: center;
-	margin: 1px auto;
-	padding-top: 10%;
-}
-.links i{
-	width: 40px;
-	font-size: 20px;
+	}*/
+	#about{
+		text-align: center;
+		margin-top: 60px;
+		height:100vh;
+	}
+	.links{
+		width:70%;
+		text-align: center;
+		margin: 1px auto;
+		padding-top: 10%;
+	}
+	.links i{
+		width: 40px;
+		font-size: 20px;
+	}
+
+	.links a{
+		transition: color 0.2s ease-in-out;
+		color:black;
+	}
+	.links a:hover{
+		color:grey;
+	}
+
+	.card-title{
+		font-size: 2em;
+	}
+
+	.section-heading{
+		margin-top: 12px;
+		text-align: center; 
+		font-size: 3em;
+	}
+
+
+
+
+
+
+
+
+
+
+/*timeline*/
+
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
 }
 
-.links a{
-	transition: color 0.2s ease-in-out;
-	color:black;
-}
-.links a:hover{
-	color:grey;
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
 }
 
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+
+.timeline-badge.primary {
+  background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+  background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+  background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+  background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+  background-color: #5bc0de !important;
+}
+
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+  margin-top: 5px;
+}
