--- a/index.css
+++ b/index.css
@@ -9,8 +9,17 @@
 	}
 
 }
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
 
-
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+	background: $background
+}
 @media screen and (min-width: 1000px){
 
 	/*timeline*/
